--- a/site/Main.html
+++ b/site/Main.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>This is our Fantasy Football Project</h1>
+        <h2>What will <i>this</i> do for Wes Welkers value?</h2>
     <a href="leaguehome.html">League Home</a>
     <a href="myteam.html">My Team</a>
     <a href="freeagents.html">Free Agents</a>
