--- a/site/Main.html
+++ b/site/Main.html
@@ -6,14 +6,24 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+    <div class="conatiner">
+        <div class="navigation">
+            <h2>Menu</h2>
+            <ul>
+               <li><a href="leaguehome.html">League Home</a></li>
+               <li><a href="myteam.html">My Team</a></li>
+               <li><a href="freeagents.html">Free Agents</a></li>
+               <li><a href="leaguemanagement.html">League Management</a></li>
+        </div>
+    <div class="main">        
     <h1>This is our Fantasy Football Project</h1>
         <h2>What will <i>this</i> do for Wes Welkers value?</h2>
-    <a href="leaguehome.html">League Home</a>
-    <a href="myteam.html">My Team</a>
-    <a href="freeagents.html">Free Agents</a>
-    <a href="leaguemanagement.html">League Management</a>
+
     <br>
     <img src="http://a.espncdn.com/i/headshots/nfl/players/full/5941.png" />
+    </div>
+    
+    </div>
 </body>
 
 </html>
