Corrected link to css

--- a/site/Main.html
+++ b/site/Main.html
@@ -3,7 +3,7 @@
 <head>
     <Title>Fantasy Football Boost Site</Title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="Main.css">
 </head>
 <body>
     <div class="conatiner">
