added bootstrap to main.html and cleaned up main.css

--- a/site/Main.html
+++ b/site/Main.html
@@ -4,18 +4,24 @@
     <Title>Fantasy Football Boost Site</Title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="Main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 </head>
+
 <body>
-    <div class="conatiner">
-        <div class="navigation">
-            <h2>Menu</h2>
-            <ul>
-               <li><a href="leaguehome.html">League Home</a></li>
-               <li><a href="myteam.html">My Team</a></li>
-               <li><a href="freeagents.html">Free Agents</a></li>
-               <li><a href="leaguemanagement.html">League Management</a></li>
+    <header class="container">
+        <div class="row">
+        <h2 class="col-sm-4">Menu</h2>
+        <nav class="col-sm-8 text-right">
+               <p><a href="leaguehome.html">League Home</a></p>
+               <p><a href="myteam.html">My Team</a></p>
+               <p><a href="freeagents.html">Free Agents</a></p>
+               <p><a href="leaguemanagement.html">League Management</a></p>
+        </nav>
         </div>
-    <div class="main">        
+    </header>
+    <section class="jumbotron">
+    <div class="container">
+    <div class="row text-center">        
     <h1>This is our Fantasy Football Project</h1>
         <h2>What will <i>this</i> do for Wes Welkers value?</h2>
 
@@ -24,6 +30,7 @@
     </div>
     
     </div>
+    </section>
 </body>
 
 </html>
