--- a/site/leaguehome.html
+++ b/site/leaguehome.html
@@ -5,7 +5,7 @@
 <head>
     <Title>Fantasy Football Boost Site</Title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="Main.css">
+    <link rel="stylesheet" type="text/css" href="css/Main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
 </head>
 
