--- a/site/Main.html
+++ b/site/Main.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src='javascript/jquery.js'></script>
+    <script src='javascript/js.js'></script>
+    
     <Title>Fantasy Football Boost Site</Title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/Main.css">
@@ -9,15 +12,7 @@
 
 <body>
     <header class="container">
-        <div class="row">
-        <h2 class="col-sm-4">Menu</h2>
-        <nav class="col-sm-8 text-right">
-               <p><a href="leaguehome.html">League Home</a></p>
-               <p><a href="myteam.html">My Team</a></p>
-               <p><a href="freeagents.html">Free Agents</a></p>
-               <p><a href="leaguemanagement.html">League Management</a></p>
-        </nav>
-        </div>
+        
     </header>
     <section class="jumbotron">
     <div class="container">
