started on a table for the team page

--- a/site/myteam.html
+++ b/site/myteam.html
@@ -19,7 +19,45 @@
         </nav>
         </div>
     </header>
-    
+    <table class="col-sm-10">
+            <thead>
+                <tr>
+                    <th>Position</th>
+                    <th>Opponent</th>
+                    <th>Player</th>
+                    <th>Projected Points</th>
+                </tr>   
+            </thead>
+            <tbody>
+                <tr>
+                    <td>QB</td>
+                </tr> 
+                <tr>
+                    <td>RB</td>
+                </tr>  
+                <tr>
+                    <td>RB</td>
+                </tr>
+                <tr>
+                    <td>WR</td>
+                </tr>
+                <tr>
+                    <td>WR</td>
+                </tr> 
+                <tr>
+                    <td>TE</td>
+                </tr> 
+                <tr>
+                    <td>FLEX(WR/RB)</td>
+                </tr> 
+                <tr>
+                    <td>K</td>
+                </tr> 
+                <tr>
+                    <td>DEF</td>
+                </tr>             
+            </tbody>
+            
 </body>
 
 </html>
