Removed leaguehome.html and routed link to Main.html

--- a/site/myteam.html
+++ b/site/myteam.html
@@ -12,14 +12,14 @@
         <div class="row">
         <h2 class="col-sm-4">Menu</h2>
         <nav class="col-sm-8 text-right">
-               <p><a href="leaguehome.html">League Home</a></p>
+               <p><a href="Main.html">League Home</a></p>
                <p><a href="myteam.html">My Team</a></p>
                <p><a href="freeagents.html">Free Agents</a></p>
                <p><a href="leaguemanagement.html">League Management</a></p>
         </nav>
         </div>
     </header>
-    <table class="col-sm-10">
+    <table class="table table-bordered table-striped">
             <thead>
                 <tr>
                     <th>Position</th>
