Changed the menu on all pages

--- a/site/Main.html
+++ b/site/Main.html
@@ -12,7 +12,14 @@
 
 <body>
 
-    <header class="container"> </header>
+     <header class="container">
+        <ul id="menu">
+               <li><a href="Main.html">League Home</a></li>
+               <li><a href="myteam.html">My Team</a></li>
+               <li><a href="freeagents.html">Free Agents</a></li>
+               <li><a href="leaguemanagement.html">League Management</a></li>
+        </ul>
+    </header>
     <section class="jumbotron">
     <div class="container">
     <div class="row text-center">        
