--- a/site/leaguemanagement.html
+++ b/site/leaguemanagement.html
@@ -5,19 +5,17 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/Main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
     <header class="container">
-        <div class="row">
-        <h2 class="col-sm-4">Menu</h2>
-        <nav class="col-sm-8 text-right">
-               <p><a href="Main.html">League Home</a></p>
-               <p><a href="myteam.html">My Team</a></p>
-               <p><a href="freeagents.html">Free Agents</a></p>
-               <p><a href="leaguemanagement.html">League Management</a></p>
-        </nav>
-        </div>
+        <ul id="menu">
+               <li><a href="Main.html">League Home</a></li>
+               <li><a href="myteam.html">My Team</a></li>
+               <li><a href="freeagents.html">Free Agents</a></li>
+               <li><a href="leaguemanagement.html">League Management</a></li>
+        </ul>
     </header>
 
 </body>
