--- a/site/myteam.html
+++ b/site/myteam.html
@@ -9,15 +9,12 @@
 
 <body>
     <header class="container">
-        <div class="row">
-        <h2 class="col-sm-4">Menu</h2>
-        <nav class="col-sm-8 text-right">
-               <p><a href="Main.html">League Home</a></p>
-               <p><a href="myteam.html">My Team</a></p>
-               <p><a href="freeagents.html">Free Agents</a></p>
-               <p><a href="leaguemanagement.html">League Management</a></p>
-        </nav>
-        </div>
+        <ul id="menu">
+               <li><a href="Main.html">League Home</a></li>
+               <li><a href="myteam.html">My Team</a></li>
+               <li><a href="freeagents.html">Free Agents</a></li>
+               <li><a href="leaguemanagement.html">League Management</a></li>
+        </ul>
     </header>
     <table class="table table-bordered table-striped">
             <thead>
