--- a/site/menu.html
+++ b/site/menu.html
@@ -1,10 +1,8 @@
-<div class="row">
-        <h2 class="col-sm-4">Menu</h2>
-        <nav class="col-sm-8 text-right">
-               <p><a href="login.html">Log In</a></p>
-               <p><a href="leaguehome.html">League Home</a></p>
-               <p><a href="myteam.html">My Team</a></p>
-               <p><a href="freeagents.html">Free Agents</a></p>
-               <p><a href="leaguemanagement.html">League Management</a></p>
-        </nav>
-        </div>
+    <header class="container">
+        <ul id="menu">
+               <li><a href="Main.html">League Home</a></li>
+               <li><a href="myteam.html">My Team</a></li>
+               <li><a href="freeagents.html">Free Agents</a></li>
+               <li><a href="leaguemanagement.html">League Management</a></li>
+        </ul>
+    </header>
