Created a menu bar and added a league home page and tab icon

--- a/site/Main.1.html
+++ b/site/Main.1.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <Title>Fantasy Football Boost Site</Title>
+     <Title>Fantasy Football Boost Site</Title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/Main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
     <link rel="icon" href="images/Football-01-128.png">
     <script src='javascript/jquery.js'></script>
     <script type="text/javascript" src="javascript/script.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <header class="container"></header>
 
+     <header class="container"></header>
+    <section class="jumbotron">
+    <div class="container">
+    <div class="row text-center">        
+    <h1>This is our Fantasy Football Project</h1>
+        <h2>What will <i>this</i> do for Wes Welkers value?</h2>
+
+    <br>
+    <img src="http://a.espncdn.com/i/headshots/nfl/players/full/5941.png" />
+    </div>
+    
+    </div>
+    </section>
 </body>
 
 </html>
