--- a/site/menu.html
+++ b/site/menu.html
@@ -1,8 +1,45 @@
-    <header class="container">
-        <ul id="menu">
-               <li><a href="Main.html">League Home</a></li>
-               <li><a href="myteam.html">My Team</a></li>
-               <li><a href="freeagents.html">Free Agents</a></li>
-               <li><a href="leaguemanagement.html">League Management</a></li>
-        </ul>
-    </header>
+ 
+
+    <nav role="navigation" class="navbar navbar-inverse">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="Main.html" class="navbar-brand">FF Boost</a>
+        </div>
+
+        <!-- Collection of nav links, forms, and other content for toggling -->
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="leaguehome.html">League Home</a></li>
+                <li><a href="myteam.html">My Team</a></li>
+                <li><a href="freeagents.html">Free Agents</a></li>
+                <li><a href="leaguemanagement.html">League Management</a></li>
+                <!--<li class="dropdown">
+                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">Messages <b class="caret"></b></a>
+                    <ul role="menu" class="dropdown-menu">
+                        <li><a href="#">Inbox</a></li>
+                        <li><a href="#">Drafts</a></li>
+                        <li><a href="#">Sent Items</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Trash</a></li>
+                    </ul>
+                </li>-->
+            </ul>
+
+            <form role="search" class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" placeholder="Search" class="form-control">
+                </div>
+            </form>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Login</a></li>
+            </ul>
+        </div>
+    </nav>
+
