--- a/site/myteam.html
+++ b/site/myteam.html
@@ -5,17 +5,15 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/Main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <link rel="icon" href="images/Football-01-128.png">
+    <script src='javascript/jquery.js'></script>
+    <script type="text/javascript" src="javascript/script.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <header class="container">
-        <ul id="menu">
-               <li><a href="Main.html">League Home</a></li>
-               <li><a href="myteam.html">My Team</a></li>
-               <li><a href="freeagents.html">Free Agents</a></li>
-               <li><a href="leaguemanagement.html">League Management</a></li>
-        </ul>
-    </header>
+    <header class="container"></header>
     <table class="table table-bordered table-striped">
             <thead>
                 <tr>
