started more work on the league home page

--- a/site/leaguehome.html
+++ b/site/leaguehome.html
@@ -27,6 +27,21 @@
     
     </div>
     </section>
+    
+    <section>
+        <div id="scoreboard">
+            <p>Derek wins again!</p>
+        </div>
+        <div id="transactions">
+            <p>Derek with the deal of the century!</p>
+        </div>
+        <div id="headlines">
+            <p>Derek elected to the Fantasy Football hall of fame</p>
+        </div>
+        <div id="myteamnews">
+            <p>You have the greatest team ever Derek!</p>
+        </div>
+    </section>
 </body>
 
 </html>
