more formatting of league home

--- a/site/leaguehome.html
+++ b/site/leaguehome.html
@@ -29,18 +29,19 @@
     </section>
     
     <section>
-        <div id="scoreboard">
-            <p>Derek wins again!</p>
-        </div>
-        <div id="transactions">
-            <p>Derek with the deal of the century!</p>
-        </div>
-        <div id="headlines">
-            <p>Derek elected to the Fantasy Football hall of fame</p>
-        </div>
-        <div id="myteamnews">
+        <div id="myteamnews" class="col-md-8">
             <p>You have the greatest team ever Derek!</p>
+       </div>        
+        <div id="scoreboard" class="col-md-4">
+            <p>Scoreboard</p>
         </div>
+        <div id="transactions" class="col-md-6">
+            <p>League Transactions</p>
+        </div>
+        <div id="headlines" class="col-md-6">
+            <p>Headlines</p>
+        </div>
+
     </section>
 </body>
 
