modified main.html somehow

--- a/site/Main.html
+++ b/site/Main.html
@@ -3,6 +3,7 @@
 <head>
     <script src='javascript/jquery.js'></script>
     <script src='javascript/js.js'></script>
+    <script src='javascript/consumeJson.js'></script>
     
     <Title>Fantasy Football Boost Site</Title>
     <meta charset="utf-8" />
