--- a/site/myteam.html
+++ b/site/myteam.html
@@ -52,7 +52,7 @@
                     <td>DEF</td>
                 </tr>             
             </tbody>
-            
+    </table>    
 </body>
 
 </html>
