added 3 new tables to drafthelper.html, changed options

--- a/site/DraftHelper/DraftHelper.html
+++ b/site/DraftHelper/DraftHelper.html
@@ -3,13 +3,14 @@
 <head>
     <Title>Fantasy Football Boost Site</Title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/Main.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-    <link rel="icon" href="images/Football-01-128.png">
     <script src='javascript/jquery.js'></script>
     <script type="text/javascript" src="javascript/script.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/Main.css">
+    <link rel="icon" href="images/Football-01-128.png">
+
 </head>
  
 <body>
@@ -19,7 +20,7 @@
 		<div class="col-md-8">
 			<div class="row">
 				<div class="col-md-4">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-hover table-condensed">
                             <thead>
                                 <tr>
                                     <th class="col-sm-1">Position</th>
@@ -58,7 +59,7 @@
                         </table> 
 				</div>
 				<div class="col-md-4">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-hover table-condensed">
                             <thead>
                                 <tr>
                                     <th class="col-sm-1">Position</th>
@@ -97,7 +98,7 @@
                         </table> 
 				</div>
 				<div class="col-md-4">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-hover table-condensed">
                            <thead>
                                 <tr>
                                     <th class="col-sm-1">Position</th>
@@ -138,7 +139,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-hover table-condensed">
                             <thead>
                                 <tr>
                                     <th class="col-sm-1">Position</th>
@@ -177,7 +178,7 @@
                         </table> 
 				</div>
 				<div class="col-md-4">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-hover table-condensed">
                             <thead>
                                 <tr>
                                     <th class="col-sm-1">Position</th>
@@ -216,7 +217,7 @@
                         </table> 
 				</div>
 				<div class="col-md-4">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-hover table-condensed">
                             <thead>
                                 <tr>
                                     <th class="col-sm-1">Position</th>
@@ -257,7 +258,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-hover table-condensed">
                             <thead>
                                 <tr>
                                     <th class="col-sm-1">Position</th>
@@ -296,7 +297,7 @@
                         </table> 
 				</div>
 				<div class="col-md-4">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-hover table-condensed">
                             <thead>
                                 <tr>
                                     <th class="col-sm-1">Position</th>
@@ -335,7 +336,130 @@
                         </table> 
 				</div>
 				<div class="col-md-4">
-                        <table class="table table-bordered table-striped">
+                        <table class="table table-bordered table-hover table-condensed">
+                            <thead>
+                                <tr>
+                                    <th class="col-sm-1">Position</th>
+                                    <th>Player</th>
+                                </tr>   
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>QB</td>
+                                </tr> 
+                                <tr>
+                                    <td>RB</td>
+                                </tr>  
+                                <tr>
+                                    <td>RB</td>
+                                </tr>
+                                <tr>
+                                    <td>WR</td>
+                                </tr>
+                                <tr>
+                                    <td>WR</td>
+                                </tr> 
+                                <tr>
+                                    <td>TE</td>
+                                </tr> 
+                                <tr>
+                                    <td>FLEX(WR/RB)</td>
+                                </tr> 
+                                <tr>
+                                    <td>K</td>
+                                </tr> 
+                                <tr>
+                                    <td>DEF</td>
+                                </tr>             
+                            </tbody>
+                        </table> 
+				</div>
+			</div>
+		</div>
+        <div class="col-md-4">
+                <table class="table table-bordered table-hover table-condensed">
+                            <thead>
+                                <tr>
+                                    <th class="col-sm-1">Position</th>
+                                    <th>Player</th>
+                                </tr>   
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>QB</td>
+                                </tr> 
+                                <tr>
+                                    <td>RB</td>
+                                </tr>  
+                                <tr>
+                                    <td>RB</td>
+                                </tr>
+                                <tr>
+                                    <td>WR</td>
+                                </tr>
+                                <tr>
+                                    <td>WR</td>
+                                </tr> 
+                                <tr>
+                                    <td>TE</td>
+                                </tr> 
+                                <tr>
+                                    <td>FLEX(WR/RB)</td>
+                                </tr> 
+                                <tr>
+                                    <td>K</td>
+                                </tr> 
+                                <tr>
+                                    <td>DEF</td>
+                                </tr>             
+                            </tbody>
+                        </table> 
+				</div>
+			</div>
+		</div>
+        <div class="col-md-4">
+                        <table class="table table-bordered table-hover table-condensed">
+                            <thead>
+                                <tr>
+                                    <th class="col-sm-1">Position</th>
+                                    <th>Player</th>
+                                </tr>   
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>QB</td>
+                                </tr> 
+                                <tr>
+                                    <td>RB</td>
+                                </tr>  
+                                <tr>
+                                    <td>RB</td>
+                                </tr>
+                                <tr>
+                                    <td>WR</td>
+                                </tr>
+                                <tr>
+                                    <td>WR</td>
+                                </tr> 
+                                <tr>
+                                    <td>TE</td>
+                                </tr> 
+                                <tr>
+                                    <td>FLEX(WR/RB)</td>
+                                </tr> 
+                                <tr>
+                                    <td>K</td>
+                                </tr> 
+                                <tr>
+                                    <td>DEF</td>
+                                </tr>             
+                            </tbody>
+                        </table> 
+				</div>
+			</div>
+		</div>
+        <div class="col-md-4">
+                        <table class="table table-bordered table-hover table-condensed">
                             <thead>
                                 <tr>
                                     <th class="col-sm-1">Position</th>
@@ -376,7 +500,7 @@
 			</div>
 		</div>
 		<div class="col-md-4">
-			    <table class="table table-bordered table-striped">
+			    <table class="table table-bordered table-hover table-condensed">
                     <thead>
                         <tr>
                             <th>Player</th>
