did some light housekeeping

--- a/site/Draft/draft_client.html
+++ b/site/Draft/draft_client.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu"/>
         <link rel="stylesheet" type="text/css" href="draft_client.css">        
         <script src='../javascript/jquery.js'></script>
-        <script src='draft_js.js'></script>
+        <script src='draft_client.js'></script>
     </head>
     <body>
         <div  class='w3-row'>
