--- a/site/html/LeagueCreator.html
+++ b/site/html/LeagueCreator.html
@@ -168,6 +168,32 @@
                     </div>
                 </div>
                 <div class='w3-row w3-section'>
+                    <div class='w3-col m4'>
+                        <label>Flex type</label>
+                        <select class='w3-select w3-border w3-text-blue' name='flex_type'>
+                            <option value='w_r' selected>Wide Receiver / Running Back (W/R)</option>
+                            <option value='w_t'>Wide Receiver / Tight End (W/T)</option>
+                            <option value='q_r_w_t'>Quarterback / Running Back / Wide Receiver / Tight End (Q/R/W/T)</option>
+                            <option value='r_w_t'>Running Back / Wide Receiver / Tight End (R/W/T)</option>
+                        </select>
+                    </div>
+                    <div class='w3-col m2'>
+                        <label>Flex</label>
+                        <select class='w3-select w3-border w3-text-blue' name='num_of_flex'>
+                            <option value='1' selected>1</option>
+                            <option value='2'>2</option>
+                            <option value='3'>3</option>
+                            <option value='4'>4</option>
+                            <option value='5'>5</option>
+                            <option value='6'>6</option>
+                            <option value='7'>7</option>
+                            <option value='8'>8</option>
+                            <option value='9'>9</option>
+                            <option value='10'>10</option>
+                        </select>
+                    </div>
+                </div>
+                <div class='w3-row w3-section'>
                     <div class='w3-col m2'>
                         <label>Bench (BN)</label>
                         <select class='w3-select w3-border w3-text-blue' name='num_of_BN'>
